--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "firebase": "^10.13.0",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
